# reseq_ros2

./: .git-blame-ignore-revs  .gitignore  .gitmodules  Dockerfile  README.md  compile_ros_pkgs.py  docker-compose.yml  package.xml  ruff.toml  setup.cfg  setup.py
arm_mk2_sim/: package.xml  setup.cfg  setup.py
reseq_arm_mk2/: CMakeLists.txt  package.xml  setup.cfg  setup.py
reseq_arm_mk2/config/: joint_limits.yaml  joint_names_reseq_arm_mk2.yaml  kinematics.yaml  moveit_controllers.yaml  pilz_cartesian_limits.yaml  reach.db.xml  reach_study.yaml  reseq_arm_mk2.srdf  ros2_controllers.yaml  servo_config.yaml  simplified_arm_assembly.ros2_control.xacro  simplified_arm_assembly.srdf  simplified_arm_assembly.urdf  study_points.pcd
reseq_arm_mk2/kdl_parser_py/: __init__.py  urdf.py
reseq_arm_mk2/launch/: arm.launch.py  display.launch.xml  reseq_reach_study.launch.py
reseq_arm_mk2/meshes/: arm_diff_pitch_link.STL  arm_diff_roll_link.STL  arm_pitch_forearm_link.STL  arm_pitch_wrist_link.STL  arm_roll_forearm_link.STL  arm_roll_wrist_link.STL
reseq_arm_mk2/reseq_arm_mk2/: arm_state_bridge.py  cartesian_arm_controller.py  coordinate_controller.py  moveit_controller.py  servo_test_scenario.py
reseq_arm_mk2/scripts/: generate_pcd.py
reseq_arm_mk2/urdf/: arm.urdf.xacro  reseq_arm_mk2.csv  reseq_arm_mk2.xacro
reseq_arm_mk2/viz/: arm.rviz  reseq_reach_study.rviz
reseq_descriptions/: CMakeLists.txt  package.xml
reseq_hardware/: CMakeLists.txt  package.xml  reseq_hardware.xml
reseq_hardware/config/: mappings.yaml  mappings_mk1.yaml
reseq_hardware/hardware/: canbus.cpp  config_parser.cpp  msg_buffer.cpp  reseq.cpp
reseq_hardware/hardware/include/reseq_hardware/: canbus.hpp  config_parser.hpp  msg_buffer.hpp  reseq.hpp
reseq_hardware/test/: test_reseq_hardware.cpp
reseq_ros2/: LAZY_LOADING.md  communication.py  config.yaml  constants.py  package.xml  setup.py
reseq_ros2/config/: agevar_consts_mk2.yaml  config_mk1.yaml  config_mk2.yaml  diff_controller1.yaml  diff_controller2.yaml  digital_twin_params.yaml  digital_twin_params_mk1.yaml  digital_twin_params_mk2.yaml  enea_consts.yaml  gz_bridge.yaml  joint_pub_consts_mk2.yaml  realsense_rgb_motion.yaml  reseq_controllers.yaml  reseq_controllers_mk2.yaml  reseq_mk1_can.yaml  reseq_mk1_vcan.yaml  reseq_mk2_can.yaml  reseq_mk2_vcan.yaml  scaler_consts.yaml  scaler_consts_mk1.yaml  scaler_consts_mk2.yaml  sensors_config.yaml  slam_rviz.yaml  slam_toolbox.yaml
reseq_ros2/config/reseq_mk2_arm/: kinematics.yaml  ros2_controllers.yaml  servo_config.yaml  simplified_arm_assembly.urdf  simplified_arm_assembly.urdf.xacro
reseq_ros2/description/: components.xacro  lidar.xacro  mk2_arm.ros2_control.xacro  module_body.xacro  reseq_arm_mk1.xacro  reseq_arm_mk2.xacro  reseq_arm_parameters.xacro  reseq_body.xacro  reseq_parameters.xacro  rgbd_camera.xacro  robot.urdf.xacro  ros2_control.xacro
reseq_ros2/description/macros/: chassis.xacro  control_chassis_joint.xacro  control_macros.xacro  joint.xacro  wheel.xacro
reseq_ros2/install/: local_setup.sh  setup.sh
reseq_ros2/install/reseq_ros2/lib/reseq_ros2/: agevar  app_gateway  communication  emulator_remote_controller  enea  feedback_replicator  joint_publisher  pivot_controller  remote_test  scaler  thermal_node
reseq_ros2/install/reseq_ros2/share/reseq_ros2/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
reseq_ros2/launch/: apriltag_launch.py  batch_detection.launch.py  common_functions_launch.py  digital_twin_launch.py  mk2_arm_launch.py  object_detection_launch.py  republish_launch.py  republish_launch.xml  reseq_core.launch.xml  reseq_core_launch.py  reseq_launch.py  sensors.launch.xml  sensors_launch.py  sim_launch.py  slam_launch.py  webcam_launch.py
reseq_ros2/log/: latest_build
reseq_ros2/reseq_ros2/: agevar.py  app_gateway.py  batch_data_handler.py  communication.py  config.yaml  constants.py  constants_mk1.py  constants_mk2.py  coordinate_controller.py  detection_data_handler.py  detector.py  emulator_monitor.py  emulator_remote_controller.py  emulator_trajectory.py  enea.py  fake_robot_feedback.py  feedback_replicator.py  joint_publisher.py  moveit_controller.py  pivot_controller.py  rcemu.py  realsense.py  remote_test.py  rplidar_node.py  scaler.py  test_emulator.py  thermal_node.py  thermal_pointcloud_fusion.py  velocity_app_node.py
reseq_ros2/reseq_ros2/detection_manager/: compute_coordinate.py  csv_writer.py  detection_manager_node.py
reseq_ros2/reseq_ros2/reseq_cv/: apriltag_detector.py  motion.py  orientation.py  qr_reader.py
reseq_ros2/reseq_ros2/reseq_cv/qr_apriltag_detection/: apriltag_reader.py  qr_reader.py
reseq_ros2/reseq_ros2/utils/: launch_utils.py
reseq_ros2/scripts/: generate_configs.py  publish_fake_detection.py  test_can.py
reseq_ros2/test/: flake8.cfg  test_emulator.py  test_flake8.py  test_node_communication.py  test_topic_correctness.py  test_xmllint.py  test_yolo.py
reseq_ros2/test/test_launch/: test_digital_twin_launch.py  test_reseq_core_launch.py  test_reseq_launch.py  test_sensors_launch.py
reseq_ros2/test/test_nodes/: test_agevar.py  test_communication.py  test_enea.py  test_joint_publisher.py  test_scaler.py
reseq_ros2/test/test_nodes/test_agevar/: test_agevar_functional.py  test_agevar_launch.py
reseq_ros2/test/test_nodes/test_communication/: test_communication_functional.py  test_communication_launch.py
reseq_ros2/test/test_nodes/test_enea/: test_enea_functional.py  test_enea_launch.py
reseq_ros2/test/test_nodes/test_joint_publisher/: test_joint_publisher_functional.py  test_joint_publisher_launch.py
reseq_ros2/test/test_nodes/test_scaler/: test_scaler_functional.py  test_scaler_launch.py
reseq_ros2/test/test_system/: test_node_communication.py  test_topic_correctness.py
reseq_ros2/test/utils/: test_utils.py
reseq_ros2/worlds/: empty.world
reseq_sim/: CMakeLists.txt  package.xml
reseq_sim/config/: gz_bridge.yaml
reseq_sim/launch/: gazebo_launch.py  mk1.launch.py  mk2.launch.py  mk2_arm.launch.py  reseq_reach_study.launch.py
reseq_sim/worlds/: empty.world
(+250 files in other folders)
