<package format="3">
  <name>reseq_arm_mk2</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for RESE.Q MK2 Manipulator</p>
    <p>This package contains configuration data, 3D models and launch files
for the RESE.Q MK2 Manipulator</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <build_depend>reach_ros</build_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>reach_ros</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_servo</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>pick_ik</exec_depend>
  <!-- KDL for Jacobian computation -->
  <depend>python3-pykdl</depend>

  <!-- trajectory publishing -->
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>std_srvs</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>