<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>reseq_descriptions</name>
  <version>0.0.0</version>
  <description>
    The `reseq_descriptions` package contains all the xacro files useful for the other packages.
    It also handles configurations files of the respective descriptions.
  </description>
  <maintainer email="todo@email.com">isaac</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
