<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>reseq_hardware</name>
  <version>0.0.1</version>
  <description>Hardware interface for the RESE.Q robot</description>
  <maintainer email="60526200+luca-byte@users.noreply.github.com">Luca De Paola</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>yaml-cpp</depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros2_control</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <ros2_control plugin="${prefix}/reseq_plugins.xml"/>
  </export>
</package>
