<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>reseq_sim</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="TODO@email.com">isaac</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ros_gz</exec_depend>
  <exec_depend>reseq_arm_mk2</exec_depend>
  <exec_depend>reseq_ros2</exec_depend>
  <exec_depend>reseq_description</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
